force-app/main/default/objects/HFS_Event_Participant__c/HFS_Event_Participant__c.object-meta.xml
<CustomObject>
    <description>Entity participation in an event with an explicit role.</description>
    <label>Event Participant</label>
    <nameField>
        <displayFormat>EVP-{000000}</displayFormat>
        <label>Event Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>