force-app/main/default/objects/HFS_Event_Participant__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Event Participants by Entity</relationshipLabel>
    <relationshipName>HFS_Event_Participant_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>