force-app/main/default/objects/HFS_Event_Participant__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>HFS_Event__c</referenceTo>
    <relationshipLabel>Event Participants by Event</relationshipLabel>
    <relationshipName>HFS_Event_Participant_Event</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>