force-app/main/default/objects/HFS_Event_Participant__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <label>Participant Role</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>