force-app/main/default/objects/HFS_Event_Participant__c/fields/Tenant_Key__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Key__c</fullName>
    <label>Tenant Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>